adjusted testimonial quote height to avoid scroll misalignment

--- a/src/app/sections/hero/hero.component.scss
+++ b/src/app/sections/hero/hero.component.scss
@@ -79,6 +79,13 @@
 	height: 7rem;
 }
 
+#hero-video {
+	position: fixed;
+	right: 0;
+	bottom: 0;
+	min-width: 100%; 
+	min-height: 100%;
+}
 
 /* SALON INTRO */
 
