--- a/src/app/sections/stylist/stylist.component.scss
+++ b/src/app/sections/stylist/stylist.component.scss
@@ -268,6 +268,14 @@
 			margin: 6rem auto;
 			max-width: 80rem;
 			line-height: 1.5;
+			height: 35vh;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+
+			span {
+				margin-top: 2rem;
+			}
 
 			h4 {
 				text-align: center;
